--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -13,7 +13,7 @@
   "month": "Month",
   "multiple_daily": "Multiple times daily",
   "multiple_daily_subtitle": "e.g. 3 or more times a day",
-  "intakes": "Intakes",
+  "amount_": "amount_",
   "times_daily": "X times daily",
   "": ""
 }
