--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -13,7 +13,7 @@
   "month": "Месяц",
   "multiple_daily": "Несколько раз в день",
   "multiple_daily_subtitle": "Например 3 или  более  раз  в день",
-  "intakes": "Потребление",
+  "amount_": "Потребление",
   "times_daily": "X раза в день ",
   "": ""
 }
