--- a/assets/locales/uz.json
+++ b/assets/locales/uz.json
@@ -13,7 +13,7 @@
   "month": "Oy",
   "multiple_daily": "Kuniga bir necha marta",
   "multiple_daily_subtitle": "masalan, kuniga 3 yoki undan ko'p marta",
-  "intakes": "Iste'mol",
+  "amount_": "Iste'mol",
   "times_daily": "Kuniga X marta",
   "": ""
 }
