--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -15,5 +15,21 @@
   "multiple_daily_subtitle": "Например 3 или  более  раз  в день",
   "amount_": "Потребление",
   "times_daily": "X раза в день ",
+  "weekly": "Конкретные  дни  недели",
+  "weekly_subtitle": "Например, пн, ср и пт",
+  "cyclic_mode": "Циклический режим",
+  "cyclic_mode_subtitle": "Например, 21 день преима, 7 дней паузы",
+  "pouse_day": "Дни паузы",
+  "cyclic_start_day": "Какой первый день это лекарственного  цикла?",
+  "start_date": "Дата начала",
+  "cyclic_title": "N день приема, X дней  перерыва",
+
+  "mon": "Пн",
+  "tue": "Вт",
+  "wed": "Ср",
+  "thur": "Чт",
+  "fri": "Пт",
+  "sat": "Сб",
+  "sun": "Вс",
   "": ""
 }
