--- a/assets/locales/uz.json
+++ b/assets/locales/uz.json
@@ -15,5 +15,20 @@
   "multiple_daily_subtitle": "masalan, kuniga 3 yoki undan ko'p marta",
   "amount_": "Iste'mol",
   "times_daily": "Kuniga X marta",
+  "weekly": "Haftaning aniq kunlari",
+  "weekly_subtitle": "masalan, Dushanba, chorshanba va juma",
+  "cyclic_mode": "Davriy rejim",
+  "cyclic_mode_subtitle": "masalan, 21 qabul kuni, 7 pauza kuni",
+  "pouse_day": "tanaffus kunlari",
+  "cyclic_start_day": "Dori siklining birinchi kuni qaysi?",
+  "start_date": "Boshlanish sanasi",
+  "cyclic_title": "N qabul kuni, X kunlik tanaffus",
+  "mon": "Dsh",
+  "tue": "Ssh",
+  "wed": "Chr",
+  "thur": "Py",
+  "fri": "Jm",
+  "sat": "Shn",
+  "sun": "Yk",
   "": ""
 }
