--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -2,10 +2,15 @@
   "hello": "Hello, @name ",
   "about_app": "About the app",
   "app_version": "App version 1.0.12",
+  "prominent_reminder": "Prominent reminders",
+  "enable_critical_alert": "Enable Critical Alert",
+  "remember_critical_alert": "Critical alerts ensure that you receive a reminders around when you device is on silent or do not disturb mode",
   "interval": "Interval",
   "interval_subtitle": "e.g. every second day, once every 6 hours",
   "every_x_hour": "Every X hours",
   "every_x_day": "Every X days",
+  "starting_at": "Starting at",
+  "ending_at": "Ending at",
   "remind_every": "Remind every",
   "hour": "hours",
   "day": "Day",
@@ -23,7 +28,6 @@
   "cyclic_start_day": "What's the first day of this medication cycle?",
   "start_date": "Start date",
   "cyclic_title": "N Intake days, X pause days",
-
   "mon": "Mn",
   "tue": "Te",
   "wed": "Wd",
