--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -2,10 +2,15 @@
   "hello": "Привет, @name ",
   "about_app": "О приложении",
   "app_version": "Версия приложения 1.0.12",
+  "prominent_reminder": "Важные напоминания ",
+  "enable_critical_alert": "Включить приоритет уведомлений",
+  "remember_critical_alert": "Важные предупреждения гарантируют, что вы будете получать напоминания, даже если ваше устройство находитсия  в режиме  'Без звука' или 'Не беспокоить'",
   "interval": "Интервал",
   "interval_subtitle": "Например, раз в два дня, раз в 6 часов ",
   "every_x_hour": "Каждые X часов",
   "every_x_day": "Каждые X дней ",
+  "starting_at": "Начинается с ",
+  "ending_at": "Окончание в",
   "remind_every": "Напоминать каждые",
   "hour": "часов",
   "day": "День",
@@ -23,7 +28,6 @@
   "cyclic_start_day": "Какой первый день это лекарственного  цикла?",
   "start_date": "Дата начала",
   "cyclic_title": "N день приема, X дней  перерыва",
-
   "mon": "Пн",
   "tue": "Вт",
   "wed": "Ср",
