--- a/assets/locales/uz.json
+++ b/assets/locales/uz.json
@@ -2,10 +2,15 @@
   "hello": "Salom, @name ",
   "about_app": "Ilova haqida",
   "app_version": "Ilova talqini 1.0.12",
+  "prominent_reminder": "Asosiy eslatmalar",
+  "enable_critical_alert": "Muhim ogohlantirishishga ruxsat",
+  "remember_critical_alert": "Muhim ogohlantirishlar qurilmangiz ovozsiz rejimda yoki Bezovta qilinmasin rejimida bo‘lsa ham eslatmalar olishingizni kafolatlaydi",
   "interval": "Interval",
   "interval_subtitle": "masalan, har ikki kunda, har 6 soatdan",
   "every_x_hour": "Har X soatda",
   "every_x_day": "Har X kunda",
+  "starting_at": "dan boshlanadi",
+  "ending_at": "Tugatish",
   "remind_every": "Eslatish har",
   "hour": "soat",
   "day": "Kun",
